fix:fase 7
